src/modules/modal/components/modal-participate/modal-participate.styles.less
@import (reference) "~assets/styles/shared";

.ModalParticipate {
  max-width: 35rem;
  position: relative;
  width: 100%;
}

.ModalParticipate__heading {
  .caps--extra-large();

  color: @color-white;
  margin-bottom: @font-size-massive;
}

.ModalParticipate__helperText {
  color: @color-white;
  display: none;
  margin-bottom: @font-size-rather-large;
}

.ModalParticipate__form {
  width: 100%;

  div,
  label {
    margin-top: 1rem;
  }

  input::placeholder {
    color: @color-gray;
  }
}

.ModalParticipate__error {
  color: @color-red;
  display: inline-flex;
  margin: 0;
  width: 100%;

  > svg {
    height: 1rem;
    line-height: 1rem;
    margin-right: 0.3rem;
    width: 1rem;
  }
}

.ModalParticipate__error--field,
.ModalParticipate__error--field:focus-within,
.ModalParticipate__error--field:focus {
  .border(true, @border-all, @color-red, @border-width-2);
}

.ModalParticipate__button {
  .button--white();

  margin-top: 2rem;
}

.ModalParticipate__form-actions {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
}

@media @breakpoint-mobile {
  .ModalParticipate {
    margin-top: -3.625rem;
  }

  .ModalParticipate__form {
    p,
    label {
      padding: 0 1rem;
    }
  }

  .ModalParticipate__helperText {
    display: block;
    padding: 0 1rem;
  }

  .ModalParticipate__heading {
    font-size: @font-size-somewhat-large;
    line-height: @font-size-somewhat-large;
    margin-bottom: @font-size-rather-large;
    padding: 0 1rem;
  }

  .ModalParticipate__form-actions {
    bottom: 0;
    flex-flow: column nowrap;
    position: fixed;
    width: 100%;

    > button {
      border-radius: 0;
      margin: 0;

      &:first-child {
        order: 2;
      }

      &:last-child {
        background-color: @color-lightpurple;
        color: @color-white;
        order: 1;

        &:disabled {
          background-color: @color-lightgray;
          color: @color-lightergray;
          cursor: default;
        }
      }
    }
  }

  .ModalParticipate__button {
    width: 100%;
  }
}

